--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
     <button id = "shareOnTwitter" class = "fa fa-twitter" title = "Tweet this quote!" onclick = "tweetQuote()">
     </button>
   </div>
-  <script src = "javascript.js"></script>
+  <script src = "script.js"></script>
 </body>
 </html>
