--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div class = "container-fluid">
       <h1 class="intro">
-        Wise Words to Ponder...
+        Here are a few of my favorite quotes...
       </h1>
     <div id="quoteBox">
     </div>
