made mobile responsive

--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
     <title>Quote Generator</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <meta name='viewport' content='width=device-width' initial-scale='1.0'/>
   </head>
   <body>
     <div class = "container-fluid">
-      <h1 class="intro">
+      <h1>
         Here are a few of my favorite quotes...
       </h1>
     <div id="quoteBox">
     </div>
     <footer>
-      Webpage created and designed by A. Lee
+      designed & coded by alee
     </footer>
     <button id = "getQuote" title = "Get new quote!" onclick = "newQuote()">
         New Quote
